# ytb2bili

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ytb2bili/: __init__.py  biliapi.py  cli.py  config.py  deps.py  download.py  login.py  result.py  upload.py
